src/objects/Case_Time_Worked__c.object
<CustomObject>
    <description>Populated via trigger each time case owner changes to track actual time worked</description>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Department__c</fullName>
        <label>Case Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Handle_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <label>Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_from_ID__c</fullName>
        <label>Owner from ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_from_Name__c</fullName>
        <label>Owner from Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_to_ID__c</fullName>
        <label>Owner to ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_to_Name__c</fullName>
        <label>Owner to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Time__c</fullName>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Worked_in_Minutes__c</fullName>
        <formula>(Stop_Time__c  -  Start_Time__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Worked (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Time Worked</label>
    <nameField>
        <label>Case Time Worked Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Times Worked</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>